@@ -32,7 +32,7 @@ public class ErlangElementFactory {
   @NotNull
   public static ErlangAtom createAtomFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, text + "() -> ok.");
-    return fileFromText.getFunctions().get(0).getFirstClause().getQAtom().getAtom();
+    return fileFromText.getFunctions().getFirst().getFirstClause().getQAtom().getAtom();
   }
 
   @NotNull
@@ -43,27 +43,27 @@ public class ErlangElementFactory {
   @NotNull
   public static ErlangExpression createExpressionFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, "f() -> " + text + ".");
-    return fileFromText.getFunctions().get(0).getFirstClause().getClauseBody().getExpressionList().get(0);
+    return fileFromText.getFunctions().getFirst().getFirstClause().getClauseBody().getExpressionList().getFirst();
   }
 
   @NotNull
   public static ErlangArgumentDefinition createFunExpressionNameFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, "foo() -> fun " + text + "() -> ok end.");
-    ErlangFunctionClause clause = fileFromText.getFunctions().get(0).getFirstClause();
-    ErlangFunExpression funExpression = (ErlangFunExpression)clause.getClauseBody().getExpressionList().get(0);
-    return funExpression.getFunClauses().getFunClauseList().get(0).getArgumentDefinition();
+    ErlangFunctionClause clause = fileFromText.getFunctions().getFirst().getFirstClause();
+    ErlangFunExpression funExpression = (ErlangFunExpression)clause.getClauseBody().getExpressionList().getFirst();
+    return funExpression.getFunClauses().getFunClauseList().getFirst().getArgumentDefinition();
   }
 
   @NotNull
   public static ErlangFunction createFunctionFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, text);
-    return fileFromText.getFunctions().get(0);
+    return fileFromText.getFunctions().getFirst();
   }
 
   @NotNull
   public static PsiElement createMacrosFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, "-define(" + text + ", 1).");
-    return fileFromText.getMacroses().get(0).getMacrosName();
+    return fileFromText.getMacroses().getFirst().getMacrosName();
   }
 
   @NotNull
@@ -71,7 +71,7 @@ public class ErlangElementFactory {
                                                                  @NotNull String moduleName,
                                                                   @NotNull String functionCallExpr) {
     ErlangFile fileFromText = createFileFromText(project, "f() -> " + moduleName + ":" + functionCallExpr + ".");
-    return (ErlangGlobalFunctionCallExpression) fileFromText.getFunctions().get(0).getFirstClause().getClauseBody().getExpressionList().get(0);
+    return (ErlangGlobalFunctionCallExpression) fileFromText.getFunctions().getFirst().getFirstClause().getClauseBody().getExpressionList().getFirst();
   }
 
   @NotNull
@@ -82,7 +82,7 @@ public class ErlangElementFactory {
   @NotNull
   public static ErlangIncludeString createIncludeString(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, "-include(\"" + text + "\").");
-    return fileFromText.getIncludes().get(0).getIncludeStringSafe();
+    return fileFromText.getIncludes().getFirst().getIncludeStringSafe();
   }
 
   @NotNull
@@ -99,13 +99,13 @@ public class ErlangElementFactory {
   public static PsiElement createRecordFromText(@NotNull Project project, @NotNull String text, @NotNull String ... fields) {
     String fieldsText = StringUtil.join(fields, ",");
     ErlangFile fileFromText = createFileFromText(project, "-record(" + text + ", {" + fieldsText + "}).");
-    return fileFromText.getRecords().get(0);
+    return fileFromText.getRecords().getFirst();
   }
 
   @NotNull
   public static PsiElement createRecordFieldsFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, "-record(text{" + text + "}).");
-    return fileFromText.getRecords().get(0).getTypedRecordFields();
+    return fileFromText.getRecords().getFirst().getTypedRecordFields();
   }
 
   @NotNull
@@ -127,7 +127,7 @@ public class ErlangElementFactory {
   @NotNull
   private static PsiElement createAttributeFromText(@NotNull Project project, @NotNull String text) {
     ErlangFile fileFromText = createFileFromText(project, text);
-    return fileFromText.getAttributes().get(0);
+    return fileFromText.getAttributes().getFirst();
   }
 
   @NotNull
